--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "bootstrap-social": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
