--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"bootstrap": "^5.2.3",
 		"bootstrap-social": "^5.1.1",
 		"firebase": "^10.1.0",
+		"query-string": "^8.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-firebase-hooks": "^5.1.1",
